--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,67 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
-    /* Asterisk wildcard selector to overide default browser styles */
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
+/* Asterisk wildcard selector to overide default browser styles */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-    /* General Styles */
-    body {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        /* Generic project styles */
-        color: #3a3a3a;
-        font-family: 'Lato', sans-serif; 
-    }
+/* General Styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
+}
 
-    /* Header */
-    header {
-        background-color: #ffffff;
-        padding: 0 1rem;
-        position: fixed;
-        z-index: 99;
-        width: 100%;
-        box-shadow: 0 2px 2px #3a3a3a
-    }
+/* Header */
+header {
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a
+}
 
-    header a {
-        text-decoration: none;
-        color: inherit;
-    }
+header a {
+    text-decoration: none;
+    color: inherit;
+}
 
-    h1 {
-        font-family: 'Oswald', sans-serif;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: #252525;
-    }
+h1 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
 
-    /* Main content */
-    main {
-        background-color: lightblue;
-        /* Make main element take up any surplus space to push footer down */
-        flex: 1 0 auto;
-    }
+#menu {
+    text-size-adjust: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
 
-    /* Footer */
-    footer {
-        background-color: orange;
-    }
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+/* Main content */
+main {
+    background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+}
+
+/* Footer */
+footer {
+    background-color: orange;
+}
