--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,3 +131,12 @@ footer {
         margin-top: 79px;
     }
 }
+
+/* Laptops and larger */
+@media screen and (min-width: 992px) {
+
+    /* underline nav bar items when mouse hover */
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
