--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ body {
 
 /* Header */
 header {
-    background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
@@ -85,10 +84,18 @@ nav {
 
 /* Main content */
 main {
-    background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/* Hero image */
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
+    
 }
 
 /* Footer */
