--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,13 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 /* Header */
 header {
     padding: 0 1rem;
@@ -33,13 +40,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -95,7 +95,24 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center/cover;
-    
+    position: relative;
+
+}
+
+#cover-text {
+    /* Last value of rgba sets the opacity so it is translucent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
 /* Footer */
@@ -146,6 +163,13 @@ main {
     main {
         /* Push main content down to accomodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero */
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
