--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ h1, h2, h3 {
 
 /* Header */
 header {
+    background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
@@ -144,16 +145,17 @@ main {
 }
 
 #circle-cover-bg {
-    background: url(../images/reasons-image.webp) no-repeat top center/cover;
+    background: url(../images/reasons-image.webp) no-repeat top center / cover;
     height: 90vh;
     width: 90vw;
     margin-bottom: 20px;
+    /* Makes square into circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
 }
 
-#benefits-iamge {
+#benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
