--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,13 @@ main {
     color: #3a3a3a;
 }
 
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger */
 @media screen and (min-width: 768px) {
 
@@ -280,6 +287,10 @@ main {
         text-align: end;
         align-self: flex-end;
     }
+
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Laptops and larger */
@@ -288,6 +299,10 @@ main {
     /* underline nav bar items when mouse hover */
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    #photos {
+        column-count: 4;
     }
 }
 
